--- a/src/pages/Experience/Experience.css
+++ b/src/pages/Experience/Experience.css
@@ -1,5 +1,5 @@
 .experience-page {
-  padding: 6rem 0 2rem;
+  padding: 8rem 0 2rem;
 }
 
 .experience-hero {
