--- a/src/pages/Projects/Projects.css
+++ b/src/pages/Projects/Projects.css
@@ -1,5 +1,5 @@
 .projects-page {
-  padding: 8rem 0 2rem;
+  padding: 10rem 0 2rem;
 }
 
 .filter-buttons {
